--- a/blueprints/templates/edit_board.html
+++ b/blueprints/templates/edit_board.html
@@ -1,7 +1,9 @@
 {% extends 'base_admin.html' %}
 {% block main_content %}
-<div class="container-fluid bg-dark" style="height: 50vh; width: 50vh;">
-    <div class="card-body bg-dark justify-content-center">
+<div class="container-fluid bg-dark" style="height: 80vw; width: 150vh;">
+
+    <div class="container bg-dark"
+         style="align-items: center; width: calc(45px * {{size+1}}); height: calc(45px * {{size+1}}); float: left; margin-top: 20px; margin-right: 20px;">
         <form class="form-inline" method="post" style="display: inline-block; align-items: center;">
                 <div class="row align-items-start">
                     <div class="col mx-0 px-0">{{ ship_form.hidden_tag() }}</div>
@@ -11,9 +13,6 @@
                     <div class="col mx-0 px-0">{{ ship_form.submit() }}</div>
                 </div>
             </form>
-    <div class="container bg-dark"
-         style="align-items: center; width: calc(45px * {{size+1}}); height: calc(45px * {{size+1}}); float: left; margin-top: 20px; margin-right: 20px;">
-
         <table class="table table-bordered border-light">
             <tbody>
             <thead>
@@ -58,7 +57,7 @@
 <div class = "row">
     <div></div>
 </div>
-</div>
+
 
 
 <style>
