--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -1,6 +1,23 @@
-{% extends 'base_admin.html'%}
+{% extends 'base_admin.html' %}
+
 {%block main_content%}
-{% for board in boards%}
-    <p>board_id: {{board.id}} with size {{board.n}}</p>
-{% endfor %}
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    {% for board in boards %}
+      <div class="col-12 col-md-6 col-lg-4 text-center mb-3">
+        <div class="card bg-dark" style="border-radius: 1rem;">
+          <div class="card-body">
+            <p class="card-text text-white">Номер комнаты:{{ board.id }}</p>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-white">Размер поля:{{ board.n }}X{{ board.n}} </p>
+          </div>
+          <div class="form-outline form-white mb-4 mt-4 form-control-lg">
+            <button class=" btn btn-outline-light btn-lg btn-lg px-5">Войти</button>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
