test_delete board

--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -15,6 +15,9 @@
           <div class="form-outline form-white mb-4 mt-4 form-control-lg">
             <button class=" btn btn-outline-light btn-lg btn-lg px-5">Войти</button>
           </div>
+          <div class="form-outline form-white mb-4 mt-4 form-control-lg">
+            <a class="btn btn-outline-light btn-lg btn-lg px-5" href = "{{url_for('board.delete_board',board_id = board.id)}}">Удалить</a>
+          </div>
         </div>
       </div>
     {% endfor %}
