--- a/blueprints/templates/user.html
+++ b/blueprints/templates/user.html
@@ -5,7 +5,7 @@
         <h1>Начните играть !</h1>
         {%if boards%}
         <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
-
+        {% endif %}
     </div>
 {%endblock%}
 
