--- a/blueprints/templates/edit_board.html
+++ b/blueprints/templates/edit_board.html
@@ -1,76 +1,64 @@
 {% extends 'base_admin.html' %}
 {% block main_content %}
-<div class="container-fluid bg-dark" style="height: 80vw; width: 150vh;">
-
-    <div class="container bg-dark"
-         style="align-items: center; width: calc(45px * {{size+1}}); height: calc(45px * {{size+1}}); float: left; margin-top: 20px; margin-right: 20px;">
-        <form class="form-inline" method="post" style="display: inline-block; align-items: center;">
-                <div class="row align-items-start">
-                    <div class="col mx-0 px-0">{{ ship_form.hidden_tag() }}</div>
-                    <div class="col mx-0 px-0">{{ ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
-                    <div class="col mx-0 px-0">{{ ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
-                    <div class="col mx-0 px-0">{{ ship_form.prize() }}</div>
-                    <div class="col mx-0 px-0">{{ ship_form.submit() }}</div>
-                </div>
-            </form>
-        <table class="table table-bordered border-light">
-            <tbody>
-            <thead>
-            <tr>
-                <th></th>
-                {% for i in range(size) %}
-                <th class="text-white" style="width: 25px; height: 25px;">{{i+1}}</th>
-                {% endfor %}
-            </tr>
-            </thead>
-            {% for y in range(size) %}
-            <tr>
-                <th class="text-white" style="width: auto; height: auto;">{{y+1}}</th>
-                {% for x in range(size) %}
-                <th class="text-white p-0" style="width: 25px; height: 25px;">
-                    <button style="width: 100%; height: 100%;" data-positionx={{x}} data-positiony={{y}}
-                            id="{{x+1}}{{y}}" onclick="fillFields(cid = {{x+1}}{{y}})">{{ board_render[y][x] }}
-                    </button>
-                </th>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-            </tbody>
-
-
-        </table>
+  <div class="container-fluid">
+    <div class="container">
+      <form class="form-inline" method="post" style="display: inline-block;">
+        <div class="row align-items-start">
+          <div class="col mx-0 px-0">{{ ship_form.hidden_tag() }}</div>
+          <div class="col mx-0 px-0">{{ ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
+          <div class="col mx-0 px-0">{{ ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
+          <div class="col mx-0 px-0">{{ ship_form.prize() }}</div>
+          <div class="col mx-0 px-0">{{ ship_form.submit() }}</div>
+        </div>
+      </form>
     </div>
-    <div >
-
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      {% for user in users %}
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-heading{{ user.id }}">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse{{ user.id }}" aria-expanded="true" aria-controls="panelsStayOpen-collapse{{ user.id }}">Пользователи</button>
+        </h2>
+        <div id="panelsStayOpen-collapse{{ user.id }}" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading{{ user.id }}">
+          <div class="accordion-body bg-dark text-white">
+            <p>Имя пользователя: {{ user.login }}</p>
+            <button data-id="{{ user.id }}" id="{{ user.id }}" class="btn btn-secondary">Добавить пользователя</button>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
     </div>
-</div>
 
-<script>
+    <h2>Игровое поле</h2>
+    <table class="table table-bordered border-dark">
+      <thead>
+        <tr>
+          <th></th>
+          {% for i in range(size) %}
+          <th>{{ i+1 }}</th>
+          {% endfor %}
+        </tr>
+      </thead>
+      <tbody>
+        {% for y in range(size) %}
+        <tr>
+          <th>{{ y+1 }}</th>
+          {% for x in range(size) %}
+          <td><button class="btn btn-outline-dark" data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">{{ board_render[y][x] }}</button></td>
+          {% endfor %}
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+  <script>
     function fillFields(cid) {
-        var button = document.getElementById(cid);
-        var input_x = document.getElementById("xValue");
-        var input_y = document.getElementById("yValue");
-        input_y.value = button.getAttribute('data-positiony');
-        input_x.value = button.getAttribute('data-positionx');
+      var button = document.getElementById(cid);
+      var input_x = document.getElementById("xValue");
+      var input_y = document.getElementById("yValue");
+      input_y.value = button.getAttribute('data-positiony');
+      input_x.value = button.getAttribute('data-positionx');
     }
-</script>
-<div class = "row">
-    <div></div>
-</div>
+  </script>
 
-
-
-<style>
-    table {
-        border-collapse: collapse;
-    }
-    table, th, td {
-        border: 1px solid black;
-    }
-    th, td {
-        width: 25px;
-        height: 25px;
-        text-align: center;
-    }
-</style>
 {% endblock %}
