rewriting structure of handlers

--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -12,7 +12,7 @@
                   <p class=" text-white">Размер поля:{{ board.n }}X{{ board.n }}</p>
               </div>
             <div class="form-outline form-white mb-4 mt-4 form-control-lg">
-              <a class="form-control form-control-lg">Войти!</a>
+              <a class="form-control form-control-lg" href = "{{url_for('board.edit_board', board_id = board.id)}}">Войти!</a>
             </div>
             <div class="form-outline form-white mb-4 mt-4 form-control-lg">
               <a class="form-control form-control-lg" href = "{{url_for('board.delete_board', board_id = board.id)}}">Удалить</a>
