--- a/blueprints/templates/game_room.html
+++ b/blueprints/templates/game_room.html
@@ -1,16 +1,17 @@
 {% extends 'base_admin.html' %}
 {% block main_content %}
-  <div class="container-fluid">
+  <div class="container">
     <div class="container">
       <form class="form-inline" method="post" style="display: inline-block;">
         <div class="row align-items-start">
-          <div class="col mx-0 px-0">{{ ship_form.hidden_tag() }}</div>
-          <div class="col mx-0 px-0">{{ ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
-          <div class="col mx-0 px-0">{{ ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
-          <div class="col mx-0 px-0">{{ ship_form.prize() }}</div>
-          <div class="col mx-0 px-0">{{ ship_form.submit() }}</div>
+          <div class="col mx-0 px-0">{{ add_ship_form.hidden_tag() }}</div>
+          <div class="col mx-0 px-0">{{ add_ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
+          <div class="col mx-0 px-0">{{ add_ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
+          <div class="col mx-0 px-0">{{ add_ship_form.prize() }}</div>
+          <div class="col mx-0 px-0">{{ add_ship_form.submit() }}</div>
         </div>
       </form>
+
     </div>
     <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
