update by lytchi kripto-investor

--- a/blueprints/templates/add_board.html
+++ b/blueprints/templates/add_board.html
@@ -16,7 +16,7 @@
                         {{ form.default_shoots(class = "form-control form-control-lg") }}
                     </div>
 
-                    <a href = "/boars/edit">{{ form.submit(class="btn btn-outline-light btn-lg btn-lg mt-5 px-5") }}</a>
+                    {{ form.submit(class="btn btn-outline-light btn-lg btn-lg mt-5 px-5") }}
                 </div>
             </div>
         </form>
