--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -1,27 +1,30 @@
 {% extends 'base_admin.html' %}
 
 {%block main_content%}
-<div class="container-fluid">
-  <div class="row justify-content-center">
-    {% for board in boards %}
-      <div class="col-12 col-md-6 col-lg-4 text-center mb-3">
-        <div class="card bg-dark" style="border-radius: 1rem;">
-          <div class="card-body">
-            <p class="card-text  text-white">Номер id:{{ board.id }}</p>
-              <div>
-                  <p class=" text-white">Размер поля:{{ board.n }}X{{ board.n }}</p>
+<div class="justify-content-center text-center">
+  <div class = "row justify-content-center text-white ">
+    <h2 class="mb-5">Ваши игровые поля</h2>
+      {% for board in boards %}
+        <div class="col-12 col-md-6 col-lg-4 text-center mb-3">
+          <div class="card bg-dark" style="border-radius: 1rem;">
+            <div class="card-body">
+              <p class="card-text  text-white">Номер id:{{ board.id }}</p>
+                <div>
+                    <p class=" text-white">Размер поля:{{ board.n }}X{{ board.n }}</p>
+                </div>
+              <div class="form-outline form-white mb-4 mt-4 form-control-lg">
+                <a class="form-control form-control-lg" href = "{{url_for('board.edit_board', board_id = board.id)}}">Войти!</a>
               </div>
-            <div class="form-outline form-white mb-4 mt-4 form-control-lg">
-              <a class="form-control form-control-lg" href = "{{url_for('board.edit_board', board_id = board.id)}}">Войти!</a>
+              <div class="form-outline form-white mb-4 mt-4 form-control-lg">
+                <a class="form-control form-control-lg" href = "{{url_for('board.delete_board', board_id = board.id)}}">Удалить</a>
+              </div>
             </div>
-            <div class="form-outline form-white mb-4 mt-4 form-control-lg">
-              <a class="form-control form-control-lg" href = "{{url_for('board.delete_board', board_id = board.id)}}">Удалить</a>
-            </div>
-          </div>
 
+          </div>
         </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+
   </div>
+  <a class="btn btn-outline-light btn-lg mt-3 px-5 "  href="{{ url_for('board.add_board') }}">Создать доску</a>>
 </div>
 {% endblock %}
