--- a/blueprints/templates/game_room.html
+++ b/blueprints/templates/game_room.html
@@ -2,19 +2,19 @@
 {% block main_content %}
 <div class="row bg-dark justify-content-center">
     <h1 class="text-white text-center">Игровое поле</h1>
-    <div class="col-2">
+    <div class="col-4">
+        <div class="col-10">
       <form class="form-inline" method="post" style="display: inline-block;">
         <div class="row align-items-start">
-          <div class="col mx-0 px-0">{{ add_ship_form.hidden_tag() }}</div>
-          <div class="col mx-0 px-0">{{ add_ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
-          <div class="col mx-0 px-0">{{ add_ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
+          <div class="col mx- px-0">{{ add_ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
+          <div class="col mx-2 px-0">{{ add_ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
           <div class="col mx-0 px-0">{{ add_ship_form.prize() }}</div>
           <div class="col mx-0 px-0">{{ add_ship_form.submit() }}</div>
         </div>
       </form>
 
     </div >
-    <div class = "col-2">
+    <div class = "col-6">
     <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-heading">
@@ -25,7 +25,7 @@
 
       {% for user in users %}
 
-            <p>Имя пользователя: {{ user.login }}</p>
+            <p class = "text-white">Имя пользователя: {{ user.login }}</p>
             <a data-id="{{ user.id }}" id="{{ user.id }}" href = "{{url_for('board.add_user',board_id = board.id,user_id = user.id )}}" class="btn btn-sm btn-secondary" >Добавить пользователя</a>
 
       {% endfor %}
@@ -35,10 +35,12 @@
       </div>
     </div>
     </div>
+
     {%for user in user_on_board%}
-      <p>{{user.login}}</p>
+      <p class ="text-white">{{user.user_id}}</p>
     {%endfor%}
 
+</div>
 
     <div class=" col-8 justify-content-center" style="overflow:auto;overflow-y:auto;">
 
@@ -74,6 +76,7 @@
       </tbody>
     </table>
     </div>
+
 </div>
 <style>
     td{
