--- a/blueprints/templates/game_room.html
+++ b/blueprints/templates/game_room.html
@@ -1,99 +1,127 @@
-{% extends 'base_admin.html' %}
+ {% extends 'base_admin.html' %}
 {% block main_content %}
-<div class="row bg-dark justify-content-center">
-    <h1 class="text-white text-center">Игровое поле</h1>
-    <div class="col-4">
-        <div class="col-6">
-      <form class="form-inline" method="post" style="display: inline-block;">
-        <div class="row align-items-start">
-          <div class="col-12 mx-0 px-0">{{ add_ship_form.hidden_tag() }}</div>
-          <div class="col-12 mx-0 px-0">{{ add_ship_form.x(max=(board.n - 1) , id = "xValue")}}</div>
-          <div class="col-12 mx-0 px-0">{{ add_ship_form.y(max=(board.n - 1) , id = "yValue")}}</div>
-          <div class="col-12 mx-0 px-0">{{ add_ship_form.prize() }}</div>
-          <div class="col-12 mx-0 px-0">{{ add_ship_form.submit() }}</div>
+<div class="backk">
+    <div class="row justify-content-center" style="background-color: none;">
+        <h1 class="text-white text-center">Игровое поле</h1>
+        <div class="col-4">
+            <div class="col-6">
+                <form class="form-inline" method="post" style="display: inline-block;">
+                    <div class="row align-items-start">
+                        <div class="col-12 mx-0 px-0 ">{{ add_ship_form.hidden_tag() }}</div>
+                        <div class="col-12">{{ add_ship_form.x(class="input-group-text my-2", style="width: 100%;", max=(board.n - 1) , id = "xValue")}}</div>
+                        <div class="col-12" >{{ add_ship_form.y(class="input-group-text my-2", style="width: 100%;", max=(board.n - 1) , id = "yValue")}}</div>
+                        <div class="col-12" >{{ add_ship_form.prize(class="input-group-text my-2",style="width: 100%;") }}</div>
+                        <div class="col-12" >{{ add_ship_form.submit(class="input-group-text my-2", style="width: 100%;",) }}</div>
+                    </div>
+                </form>
+
+            </div>
+            <div class="col-6 my-3 ">
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-heading">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapse" aria-expanded="true"
+                                    aria-controls="panelsStayOpen-collapse">Пользователи
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapse" class="accordion-collapse collapse show"
+                             aria-labelledby="panelsStayOpen-heading">
+                            <div class="accordion-body bg-dark text-white">
+
+                                {% for user in users %}
+
+                                <p class="text-white">Имя пользователя: {{ user.login }}</p>
+                                <a data-id="{{ user.id }}" id="{{ user.id }}"
+                                   href="{{url_for('board.add_user',board_id = board.id,user_id = user.id )}}"
+                                   class="btn btn-sm btn-secondary">Добавить пользователя</a>
+
+                                {% endfor %}
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {%for user in user_on_board%}
+            <p class="text-white">{{user.user_id}}</p>
+            {%endfor%}
+
         </div>
-      </form>
 
-    </div >
-    <div class = "col-6">
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-heading">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse" aria-expanded="true" aria-controls="panelsStayOpen-collapse">Пользователи</button>
-        </h2>
-          <div id="panelsStayOpen-collapse" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-heading">
-          <div class="accordion-body bg-dark text-white">
+        <div class=" col-8 justify-content-center" style="overflow:auto;overflow-y:auto;">
 
-      {% for user in users %}
+            <table class="table table-bordered border-dark bg-light" style="width:calc(35px*{{size+1}});">
+                <thead>
+                <tr>
+                    <th style="width: 35px; height: 35px;"></th>
+                    {% for i in range(size) %}
+                    <th class="text-dark" style="width: 35px; height: 35px;">{{ i+1 }}</th>
+                    {% endfor %}
+                </tr>
+                </thead>
+                <tbody>
+                {% for y in range(size) %}
+                <tr class="text-dark bg-light" style="width: 35px; height: 35px;">
+                    <th style="width: 35px; height: 35px;">{{ y+1 }}</th>
+                    {% for x in range(size) %}
+                    <td>
+                        {% if board_render[y][x] == "." %}
+                        <button class="btn" style="width: 35px; height: 35px;" data-positionx="{{ x }}"
+                                data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">
+                            {%endif%}
+                            {% if board_render[y][x] == "#" %}
+                            <button class="btn btn contant" style="width: 35px; height: 35px;"
+                                    data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}"
+                                    onclick="fillFields('{{ x+1 }}{{ y }}')">
 
-            <p class = "text-white">Имя пользователя: {{ user.login }}</p>
-            <a data-id="{{ user.id }}" id="{{ user.id }}" href = "{{url_for('board.add_user',board_id = board.id,user_id = user.id )}}" class="btn btn-sm btn-secondary" >Добавить пользователя</a>
 
-      {% endfor %}
+                                {%endif%}
+                            </button>
 
-          </div>
+                    </td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
-      </div>
+
     </div>
-    </div>
-
-    {%for user in user_on_board%}
-      <p class ="text-white">{{user.user_id}}</p>
-    {%endfor%}
-
-</div>
-
-    <div class=" col-8 justify-content-center" style="overflow:auto;overflow-y:auto;">
-
-    <table class="table table-bordered border-dark bg-light" style = "width:calc(25px*{{size+1}});">
-      <thead>
-        <tr>
-          <th></th>
-          {% for i in range(size) %}
-          <th class="text-dark">{{ i+1 }}</th>
-          {% endfor %}
-        </tr>
-      </thead>
-      <tbody >
-        {% for y in range(size) %}
-        <tr class="text-dark bg-light">
-          <th>{{ y+1 }}</th>
-          {% for x in range(size) %}
-          <td>
-              {% if board_render[y][x] == "." %}
-                <button class="btn btn-outline-dark" style="width:100%;height:100%;" data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">
-                {%endif%}
-              {% if board_render[y][x] == "#" %}
-                <button class="btn btn-outline-dark contant" style="width:100%;height:100%;" data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">
-
-
-              {%endif%}
-            </button>
-
-          </td>
-          {% endfor %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    </div>
-
 </div>
 <style>
-    td{
-        padding:0;
+    th{
+        width: 35px; height: 35px;
     }
   .contant{
-  background: url(https://sergeychikin.ru/365/028-transport/sea/cruiser.svg);
-  width: 10%;
-  height: 10%;
+  background: url(https://sergeychikin.ru/365/150-clothes/sneakers.svg);
+  background-size: cover;
+  background-position: center center;
   }
+  .contant:hover{
+  border-color: rgba(255, 0, 0, 255);
+	border-width: 5px;
+	}
   body{
-    background: linear-gradient(to bottom right, #87CEFA, #20B2AA);
+    background-size: cover;
+  background-position: center center;
   }
 
+  .btn:hover {
+  background-size: cover;
+  background-position: center center;
+	border-color: rgba(255, 0, 0, 255);
+	border-width: 5px;
+}
+.
+
+
+
+
+
 </style>
-  <script>
+<script>
     function fillFields(cid) {
       var button = document.getElementById(cid);
       var input_x = document.getElementById("xValue");
@@ -101,6 +129,9 @@
       input_y.value = button.getAttribute('data-positiony');
       input_x.value = button.getAttribute('data-positionx');
     }
-  </script>
+
+
+
+</script>
 
 {% endblock %}
