--- a/blueprints/templates/game_room.html
+++ b/blueprints/templates/game_room.html
@@ -2,21 +2,60 @@
 {% block main_content %}
 <div class="backk">
     <div class="row justify-content-center" style="background-color: none;">
-        <h1 class="text-white text-center my-5">Игровое поле</h1>
-        <div class="col-4">
+        <h1 class="text-white text-center my-1">Игровое поле</h1>
+        <center>
+        <div class=" col-12 justify-content-center" style="overflow:auto;overflow-y:auto;">
+            <table class="table table-bordered border-dark bg-light my-4" style="width:calc(35px*({{size+1}} + 1));">
+                <thead>
+                <tr>
+                    <th style="width: 35px; height: 35px;  background: #e8ecef;"></th>
+                    {% for i in range(size) %}
+                    <th class="text-dark" style="width: 35px; height: 35px; background: #e8ecef;">{{ i+1 }}</th>
+                    {% endfor %}
+                </tr>
+                </thead>
+                <tbody>
+                {% for y in range(size) %}
+                <tr class="text-dark bg-light" style="width: 41.8px; height: 35px; background: #e8ecef;">
+                    <th style="width: 41.8px; height: 38px;  background: #e8ecef;">{{ y+1 }}</th>
+                    {% for x in range(size) %}
+                    <td style="background: #e8ecef;">
+                        {% if board_render[y][x] == "." %}
+                        <button class="btn" style="width: 35px; height: 35px;  background: #e8ecef;" data-positionx="{{ x }}"
+                                data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">
+                            {%endif%}
+                            {% if board_render[y][x] == "#" %}
+                            <button class="btn contant" style="width: 35px; height: 35px;"
+                                    data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}"
+                                    onclick="fillFields('{{ x+1 }}{{ y }}')">
+
+
+                                {%endif%}
+                            </button>
+
+                    </td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        </center>
+        <div class="col-12 my-2">
+            <div class="row">
             <div class="col-6">
                 <form class="form-inline" method="post" style="display: inline-block;">
                     <div class="row align-items-start">
                         <div class="col-12 mx-0 px-0 ">{{ add_ship_form.hidden_tag() }}</div>
-                        <div class="col-12">{{ add_ship_form.x(class="input-group-text my-2", style="width: 100%;", max=(board.n - 1) , id = "xValue")}}</div>
-                        <div class="col-12" >{{ add_ship_form.y(class="input-group-text my-2", style="width: 100%;", max=(board.n - 1) , id = "yValue")}}</div>
+                        <div class="col-1">{{ add_ship_form.x(style="width: 1px; height: 1px; opacity: 0;", max=(board.n - 1) , id = "xValue")}}</div>
+                        <div class="col-1" >{{ add_ship_form.y( style="width: 1px; height: 1px; opacity: 0;", max=(board.n - 1) , id = "yValue")}}</div>
                         <div class="col-12" >{{ add_ship_form.prize(class="input-group-text my-2",style="width: 100%;") }}</div>
-                        <div class="col-12" >{{ add_ship_form.submit(class="input-group-text my-2", style="width: 100%;",) }}</div>
+                        <div class="col-12" style=" align-text: center;">{{ add_ship_form.submit(class="input-group-text my-2", style="width: 100%;") }}</div>
                     </div>
                 </form>
 
             </div>
-            <div class="col-6 my-3 ">
+            <div class="col-6 my-5">
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-heading">
@@ -34,7 +73,7 @@
                                 <p class="text-white">Имя пользователя: {{ user.login }}</p>
                                 <a data-id="{{ user.id }}" id="{{ user.id }}"
                                    href="{{url_for('board.add_user',board_id = board.id,user_id = user.id )}}"
-                                   class="btn btn-sm btn-secondary">Добавить пользователя</a>
+                                   class="accordion-body my-3">Добавить пользователя</a>
 
                                 {% endfor %}
 
@@ -47,47 +86,8 @@
             {%for user in user_on_board%}
             <p class="text-white">{{user.user_id}}</p>
             {%endfor%}
-
+            </div>
         </div>
-
-        <div class=" col-8 justify-content-center" style="overflow:auto;overflow-y:auto;">
-
-            <table class="table table-bordered border-dark bg-light" style="width:calc(35px*{{size+1}});">
-                <thead>
-                <tr>
-                    <th style="width: 35px; height: 35px;  background: #e8ecef;"></th>
-                    {% for i in range(size) %}
-                    <th class="text-dark" style="width: 35px; height: 35px;  background: #e8ecef;">{{ i+1 }}</th>
-                    {% endfor %}
-                </tr>
-                </thead>
-                <tbody>
-                {% for y in range(size) %}
-                <tr class="text-dark bg-light" style="width: 35px; height: 35px; background: #e8ecef;">
-                    <th style="width: 35px; height: 35px;  background: #e8ecef;">{{ y+1 }}</th>
-                    {% for x in range(size) %}
-                    <td>
-                        {% if board_render[y][x] == "." %}
-                        <button class="btn" style="width: 35px; height: 35px;  background: #e8ecef;" data-positionx="{{ x }}"
-                                data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" onclick="fillFields('{{ x+1 }}{{ y }}')">
-                            {%endif%}
-                            {% if board_render[y][x] == "#" %}
-                            <button class="btn btn contant" style="width: 35px; height: 35px;"
-                                    data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}"
-                                    onclick="fillFields('{{ x+1 }}{{ y }}')">
-
-
-                                {%endif%}
-                            </button>
-
-                    </td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
     </div>
 </div>
 <style>
@@ -98,10 +98,11 @@
   background: url(https://sergeychikin.ru/365/150-clothes/sneakers.svg);
   background-size: cover;
   background-position: center center;
+  background-repeat: no-repeat;
   }
   .contant:hover{
   border-color: rgba(255, 0, 0, 255);
-	border-width: 5px;
+	border-width: 4px;
 	}
   body{
     background-size: cover;
@@ -112,7 +113,13 @@
   background-size: cover;
   background-position: center center;
 	border-color: rgba(255, 0, 0, 255);
-	border-width: 5px;
+	border-width: 4px;
+
+.accordion-body{
+	border-color: rgba(255, 236, 239, 255);
+	border: 4px;
+
+}
 }
 </style>
 <script>
